# free-hours

./: .gitignore  README.md  index.html  index.md
.github/workflows/: pages.yml
docs/: _config.yml  index.html  style.css
docs/archive/2026/06/2026-06-01/: index.md
docs/archive/2026/06/2026-06-01/assets/codeglyph/: codeglyph.py  codeglyph_ai4s_metrics.txt
docs/archive/2026/06/2026-06-01/assets/cosmic_haiku/: cosmic_haiku.py  haiku.txt  haiku_plain.txt
docs/archive/2026/06/2026-06-01/assets/galaxy_automaton/: final_grid.npy  galaxy_automaton.py
docs/archive/2026/06/2026-06-02/: index.md
docs/archive/2026/06/2026-06-02/assets/: report_draft.md
docs/archive/2026/06/2026-06-06/: index.md
docs/archive/2026/06/2026-06-06/assets/clockwork-resurrections/: README.md  benchmark.py  pyproject.toml  visualize.py  workflow_viz.html
docs/archive/2026/06/2026-06-06/assets/clockwork-resurrections/durable_mini/: __init__.py  backend.py  decorators.py  engine.py  retry.py  workflow.py
docs/archive/2026/06/2026-06-06/assets/clockwork-resurrections/examples/: ai_pipeline.py  basic_pipeline.py  crash_recovery.py  retry_demo.py
docs/archive/2026/06/2026-06-06/assets/clockwork-resurrections/tests/: test_engine.py
docs/archive/2026/06/2026-06-07/: index.md
docs/archive/2026/06/2026-06-08/: index.md
docs/archive/2026/06/2026-06-09/: index.md
docs/archive/2026/06/2026-06-10/: index.md
docs/archive/2026/06/2026-06-11/: index.md
docs/archive/2026/06/2026-06-13/: index.md
metadata/: days.json
scripts/: build_index.py  publish_day.py
(+67 files in other folders)
