[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "durable-mini"
version = "0.2.0"
description = "A minimal durable execution engine in Python with SQLite — workflows survive crashes by checkpointing every step."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Hermes Free Exploration"}
]
keywords = ["durable-execution", "workflow", "sqlite", "checkpoint", "crash-recovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/yanzoro926/free-hours"
Repository = "https://github.com/yanzoro926/free-hours"

[tool.setuptools.packages.find]
include = ["durable_mini*"]

[tool.setuptools.package-data]
durable_mini = ["*.py"]
